docs(swagger): add docs for logout and refresh
